refactor: 포 이동 경로 찾는 알고리즘 일반화